# Moneyphant

./: .gitignore  CMakeLists.txt  Info.plist  Moneyphant.pro  Moneyphant.sublime-project  README.md  config.pri  currencies.txt  currencies.xls  gitversion.pri  icon.icns  parseCurrencyTable.py  readme.md  readme.txt
cmake/Modules/: FindHinnantDate.cmake  FindSqlpp11.cmake
graphics/: graphics.qrc
scripts/: .gitignore  gitversion.py
sql/: ddl2cpp  evolutions.qrc  structure.sql
sql/evolutions/: 0.sql  1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql
src/: .gitignore  Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  AccountModel.cpp  AccountModel.h  AccountProxyModel.cpp  AccountProxyModel.h  CsvImporter.cpp  Evolutions.cpp  Evolutions.h  Global.cpp  Global.h  Iban.h  MainWindow.cpp  MainWindow.h  MoneyAmount.cpp  StatementReader.cpp  StatementReader.h  TableManager.cpp  TableManager.h  Tag.cpp  Tag.h  TagEdit.cpp  TagEdit.h  TagHelper.cpp  TagHelper.h  TagLabel.cpp  TagLabel.h  Transfer.cpp  Transfer.h  TransferManager.cpp  TransferManager.h  TransferModel.cpp  TransferModel.h  TransferProxyModel.cpp  TransferProxyModel.h  TransferStats.cpp  TransferStats.h  (+10 more)
src/globals/: all.h  assert.cpp  assert.h  qt-util.cpp  qt-util.h  sqlpp.h  string-util.cpp  string-util.h  version.cpp  version.h
src/model/: Account.cpp  Account.h  AccountModel.cpp  AccountModel.h  AccountProxyModel.cpp  AccountProxyModel.h  Currency.cpp  Currency.h  CurrencyWithAmount.cpp  CurrencyWithAmount.h  StatementFileFormat.cpp  StatementFileFormat.h  TagModel.cpp  TagModel.h  Transfer.cpp  Transfer.h  TransferModel.cpp  TransferModel.h  TransferProxyModel.cpp  TransferProxyModel.h
src/ui/: AboutDialog.cpp  AboutDialog.ui  BalanceTab.cpp  BalanceTab.h  ColumnChooser.cpp  ColumnChooser.h  DataChooser.cpp  DataChooser.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferenceDialog.cpp  PreferenceDialog.h  StatementImporterDialog.cpp  StatementImporterDialog.h  StatementImporterDialog.ui  TagEdit.cpp  TransferTab.cpp  TransferTab.h  TransferTab.ui
src/ui-dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  PreferenceDialog.cpp  PreferenceDialog.h  PreferenceDialog.ui  StatementImporterDialog.cpp  StatementImporterDialog.h
src/ui-tabs/: AccountTab.cpp  AccountTab.h  AccountTab.ui  BalanceTab.cpp  BalanceTab.h  BalanceTab.ui  ExpenseTab.cpp  ExpenseTab.h  ExpenseTab.ui  Tab.h  TransferTab.cpp  TransferTab.h  TransferTab.ui
ui/: mainwindow.ui
